k8s/middleware-compress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-compress
spec:
  compress: {}
